# hyprland-led-ambilight

./: .gitignore  CHANGELOG.md  README.md  Taskfile.yml  config.example.toml  pyproject.toml
scripts/: tuya_raw_to_config.py
src/tuyactrl/: __main__.py  capture.py  cli.py  color.py  config.py  context.py  main.py  status.py  tuya.py
tests/: test_capture.py  test_color.py  test_config.py  test_context.py  test_status.py  test_tuya.py
