[project]
name = "tuyactrl"
version = "0.1.0"
description = "Hyprland ambilight for Tuya LED strips"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tinytuya>=1.12",
    "pillow>=10",
    "numpy>=1.26",
]

[project.scripts]
tuyactrl = "tuyactrl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuyactrl"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
